--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
           <div class="-my-6 divide-y divide-zinc-500/10">
             <div class="space-y-4 py-6">
               <a
-                href="/"
+                href="index.html"
                 class="-mx-3 block rounded-lg px-3 py-2 text-xl flex leading-7 text-zinc-400 hover:bg-amber-100 hover:font-bold hover:text-black transition-all duration-300"
                 ><svg
                   xmlns="http://www.w3.org/2000/svg"
