--- a/pengaturan.html
+++ b/pengaturan.html
@@ -27,7 +27,7 @@
         <ul id="menu-items" class="space-y-3 my-20 flex-1">
           <li>
             <a
-              href="/"
+              href="index.html"
               class="text-zinc-400 flex items-center hover:text-black rounded-xl hover:bg-amber-100 px-4 mx-4 py-4 transition-all"
             >
               <svg
@@ -203,7 +203,7 @@
           <div class="-my-6 divide-y divide-zinc-500/10">
             <div class="space-y-4 py-6">
               <a
-                href="/"
+                href="index.html"
                 class="-mx-3 block rounded-lg px-3 py-2 text-xl flex leading-7 text-zinc-400 hover:bg-amber-100 hover:font-bold hover:text-black transition-all duration-300"
                 ><svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -215,7 +215,7 @@
                     d="M197.332 170.668h-160C16.746 170.668 0 153.922 0 133.332v-96C0 16.746 16.746 0 37.332 0h160c20.59 0 37.336 16.746 37.336 37.332v96c0 20.59-16.746 37.336-37.336 37.336zM37.332 32A5.336 5.336 0 0 0 32 37.332v96a5.337 5.337 0 0 0 5.332 5.336h160a5.338 5.338 0 0 0 5.336-5.336v-96A5.337 5.337 0 0 0 197.332 32zm160 480h-160C16.746 512 0 495.254 0 474.668v-224c0-20.59 16.746-37.336 37.332-37.336h160c20.59 0 37.336 16.746 37.336 37.336v224c0 20.586-16.746 37.332-37.336 37.332zm-160-266.668A5.337 5.337 0 0 0 32 250.668v224A5.336 5.336 0 0 0 37.332 480h160a5.337 5.337 0 0 0 5.336-5.332v-224a5.338 5.338 0 0 0-5.336-5.336zM474.668 512h-160c-20.59 0-37.336-16.746-37.336-37.332v-96c0-20.59 16.746-37.336 37.336-37.336h160c20.586 0 37.332 16.746 37.332 37.336v96C512 495.254 495.254 512 474.668 512zm-160-138.668a5.338 5.338 0 0 0-5.336 5.336v96a5.337 5.337 0 0 0 5.336 5.332h160a5.336 5.336 0 0 0 5.332-5.332v-96a5.337 5.337 0 0 0-5.332-5.336zm160-74.664h-160c-20.59 0-37.336-16.746-37.336-37.336v-224C277.332 16.746 294.078 0 314.668 0h160C495.254 0 512 16.746 512 37.332v224c0 20.59-16.746 37.336-37.332 37.336zM314.668 32a5.337 5.337 0 0 0-5.336 5.332v224a5.338 5.338 0 0 0 5.336 5.336h160a5.337 5.337 0 0 0 5.332-5.336v-224A5.336 5.336 0 0 0 474.668 32zm0 0"
                     data-original="#000000"
                   /></svg
-                >Dashoard</a
+                >Dashboard</a
               >
               <a
                 href="#"
